Bug 1409063: Remove OS.Constants.Path attributes that were added for WebappsInstaller.jsm and are no longer used. r=baku