dom/system/OSFileConstants.cpp
@@ -110,11 +110,6 @@ OSFileConstantsService::Paths
    */
   nsString homeDir;
   /**
-   * The user's desktop directory, if there is one. Otherwise this is
-   * the same as homeDir.
-   */
-  nsString desktopDir;
-  /**
    * The user's 'application data' directory.
    * Windows:
    *   HOME = Documents and Settings\$USER\Application Data
@@ -130,31 +125,11 @@ OSFileConstantsService::Paths
    */
   nsString userApplicationDataDir;
 
-#if defined(XP_WIN)
-  /**
-   * The user's application data directory.
-   */
-  nsString winAppDataDir;
-  /**
-   * The programs subdirectory in the user's start menu directory.
-   */
-  nsString winStartMenuProgsDir;
-#endif // defined(XP_WIN)
-
 #if defined(XP_MACOSX)
   /**
    * The user's Library directory.
    */
   nsString macUserLibDir;
-  /**
-   * The Application directory, that stores applications installed in the
-   * system.
-   */
-  nsString macLocalApplicationsDir;
-  /**
-   * The user's trash directory.
-   */
-  nsString macTrashDir;
 #endif // defined(XP_MACOSX)
 
   Paths()
@@ -164,18 +139,10 @@ OSFileConstantsService::Paths
     profileDir.SetIsVoid(true);
     localProfileDir.SetIsVoid(true);
     homeDir.SetIsVoid(true);
-    desktopDir.SetIsVoid(true);
     userApplicationDataDir.SetIsVoid(true);
-
-#if defined(XP_WIN)
-    winAppDataDir.SetIsVoid(true);
-    winStartMenuProgsDir.SetIsVoid(true);
-#endif // defined(XP_WIN)
 
 #if defined(XP_MACOSX)
     macUserLibDir.SetIsVoid(true);
-    macLocalApplicationsDir.SetIsVoid(true);
-    macTrashDir.SetIsVoid(true);
 #endif // defined(XP_MACOSX)
   }
 };
@@ -289,18 +256,10 @@ OSFileConstantsService::InitOSFileConstants()
 
   GetPathToSpecialDir(NS_OS_TEMP_DIR, paths->tmpDir);
   GetPathToSpecialDir(NS_OS_HOME_DIR, paths->homeDir);
-  GetPathToSpecialDir(NS_OS_DESKTOP_DIR, paths->desktopDir);
   GetPathToSpecialDir(XRE_USER_APP_DATA_DIR, paths->userApplicationDataDir);
-
-#if defined(XP_WIN)
-  GetPathToSpecialDir(NS_WIN_APPDATA_DIR, paths->winAppDataDir);
-  GetPathToSpecialDir(NS_WIN_PROGRAMS_DIR, paths->winStartMenuProgsDir);
-#endif // defined(XP_WIN)
 
 #if defined(XP_MACOSX)
   GetPathToSpecialDir(NS_MAC_USER_LIB_DIR, paths->macUserLibDir);
-  GetPathToSpecialDir(NS_OSX_LOCAL_APPLICATIONS_DIR, paths->macLocalApplicationsDir);
-  GetPathToSpecialDir(NS_MAC_TRASH_DIR, paths->macTrashDir);
 #endif // defined(XP_MACOSX)
 
   mPaths = Move(paths);
@@ -980,34 +939,12 @@ OSFileConstantsService::DefineOSFileConstants(JSContext* aCx,
     return false;
   }
 
-  if (!SetStringProperty(aCx, objPath, "desktopDir", mPaths->desktopDir)) {
-    return false;
-  }
-
   if (!SetStringProperty(aCx, objPath, "userApplicationDataDir", mPaths->userApplicationDataDir)) {
     return false;
   }
 
-#if defined(XP_WIN)
-  if (!SetStringProperty(aCx, objPath, "winAppDataDir", mPaths->winAppDataDir)) {
-    return false;
-  }
-
-  if (!SetStringProperty(aCx, objPath, "winStartMenuProgsDir", mPaths->winStartMenuProgsDir)) {
-    return false;
-  }
-#endif // defined(XP_WIN)
-
 #if defined(XP_MACOSX)
   if (!SetStringProperty(aCx, objPath, "macUserLibDir", mPaths->macUserLibDir)) {
-    return false;
-  }
-
-  if (!SetStringProperty(aCx, objPath, "macLocalApplicationsDir", mPaths->macLocalApplicationsDir)) {
-    return false;
-  }
-
-  if (!SetStringProperty(aCx, objPath, "macTrashDir", mPaths->macTrashDir)) {
     return false;
   }
 #endif // defined(XP_MACOSX)
